z-index fixed

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 2;
+  z-index: 4;
   transition: all 1s ease;
 }
 .header .wrapper {
