--- a/src/components/Menu/dropmenu.css
+++ b/src/components/Menu/dropmenu.css
@@ -7,7 +7,7 @@
   transition: all 1s ease;
   opacity: 0%;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
